--- a/config-data/costumer-service.yml
+++ b/config-data/costumer-service.yml
@@ -2,16 +2,17 @@ spring.cloud.config.enabled: true
 spring.jpa.defer-datasource-initialization: true
 
 server:
-  port: 8091
+  port: 8092
   error:
     include-message: always
+    include-binding-errors: always
 
 spring:
   h2:
     console:
-      enable: true
+      enabled: true
   datasource:
-    url: jdbc:h2:mem:productDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:customerDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
     platform: h2
     username: sa
@@ -27,9 +28,8 @@ spring:
         show_sql: true
         use_sql_comments: false
         format_sql: false
-
-  logging:
-    pattern:
-      console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
 
 
