--- a/service-product/src/main/resources/application.yml
+++ b/service-product/src/main/resources/application.yml
@@ -1,5 +1,4 @@
-#spring.cloud.config.enabled: false
-#spring.jpa.defer-datasource-initialization: true
+spring.jpa.defer-datasource-initialization: true
 
 server:
   port: 8091
