--- a/shopping-service/src/main/resources/application.yml
+++ b/shopping-service/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-spring.cloud.config.enabled: false
 spring.jpa.defer-datasource-initialization: true
 
 server:
@@ -9,7 +8,7 @@ server:
 spring:
   h2:
     console:
-      enable: true
+      enabled: true
   datasource:
     url: jdbc:h2:mem:productDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
@@ -28,6 +27,6 @@ spring:
         use_sql_comments: false
         format_sql: false
 
-  logging:
-    pattern:
-      console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
