--- a/config-data/service-product.yml
+++ b/config-data/service-product.yml
@@ -1,15 +1,15 @@
-spring.cloud.config.enabled: false
 spring.jpa.defer-datasource-initialization: true
 
 server:
   port: 8091
   error:
     include-message: always
+    include-binding-errors: always
 
 spring:
   h2:
     console:
-      enable: true
+      enabled: true
   datasource:
     url: jdbc:h2:mem:productDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
@@ -28,6 +28,6 @@ spring:
         use_sql_comments: false
         format_sql: false
 
-  logging:
-    pattern:
-      console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
