--- a/config-data/shopping-service.yml
+++ b/config-data/shopping-service.yml
@@ -1,10 +1,10 @@
-spring.cloud.config.enabled: false
 spring.jpa.defer-datasource-initialization: true
 
 server:
-  port: 8091
+  port: 8093
   error:
     include-message: always
+    include-binding-errors: always
 
 spring:
   h2:
