--- a/config-data/shopping-service.yml
+++ b/config-data/shopping-service.yml
@@ -38,6 +38,8 @@ eureka:
 Feign:
   hystrix:
     enabled: true
+    dashboard:
+     proxy-stream-allow-list: "*"
 management:
   endpoints:
     web:
