--- a/shopping-service/build.gradle
+++ b/shopping-service/build.gradle
@@ -32,8 +32,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.1.RELEASE'
 	implementation (group: 'org.springframework.cloud', name: 'spring-cloud-netflix-hystrix-dashboard', version: '2.2.2.RELEASE')
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
