--- a/config-data/shopping-service.yml
+++ b/config-data/shopping-service.yml
@@ -38,8 +38,8 @@ eureka:
 Feign:
   hystrix:
     enabled: true
-    dashboard:
-     proxy-stream-allow-list: "*"
+  circuitbreaker:
+    enabled: true
 management:
   endpoints:
     web:
