--- a/shopping-service/build.gradle
+++ b/shopping-service/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 
 	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
-	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.1.RELEASE'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.2.RELEASE'
+	implementation (group: 'org.springframework.cloud', name: 'spring-cloud-netflix-hystrix', version: '2.2.2.RELEASE')
 	implementation (group: 'org.springframework.cloud', name: 'spring-cloud-netflix-hystrix-dashboard', version: '2.2.2.RELEASE')
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
