--- a/config-data/customer-service.yml
+++ b/config-data/customer-service.yml
@@ -34,5 +34,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8099/eureka/
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
