--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.2.1'
 }
 
 dependencyManagement {
