--- a/service-product/build.gradle
+++ b/service-product/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.2.1'
 }
 
 dependencyManagement {
