--- a/shopping-service/build.gradle
+++ b/shopping-service/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
-
+	compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.2.1'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.2.RELEASE'
