--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -29,13 +29,14 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	//implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.2.1'
+	implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.6.2'
+
 }
 
 dependencyManagement {
